...

        Button(
            onClick = { viewModel.login() },
            modifier = Modifier
                .fillMaxWidth()
                .height(56.dp)
                .semantics { testTag = "login_button" }, // <- testTag adicionado
            enabled = !state.isLoading,
            shape = RoundedCornerShape(12.dp),
            colors = ButtonDefaults.buttonColors(containerColor = Orange)
        ) {
            if (state.isLoading) {
                CircularProgressIndicator(
...

        Spacer(Modifier.height(8.dp))

        TextButton(
            onClick = navToRegister,
            enabled = !state.isLoading,
            modifier = Modifier.semantics { testTag = "register_button" } // <- testTag adicionado
        ) {
            Text(
                stringResource(R.string.register),
                fontSize = 14.sp * state.fontScale,
                color = Orange
            )
...
